org-dlti-system/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-mysql-moodle
  namespace: org-dlti-system
  labels:
    app.kubernetes.io/instance: network-policies
spec:
  podSelector: {}
  egress:
    - ports:
        - protocol: TCP
          port: 3306
      to:
        - ipBlock:
            cidr: 0.0.0.0/0
  policyTypes:
    - Egress
